@@ -1,2 +1,2 @@
-ACLOCAL_AMFLAGS = -I ac-cedar
+ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = src pyext include data bin
