@@ -1,0 +1,36 @@
+#! /usr/bin/env bash
+# @configure_input@
+
+# These variables need to exist
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+datarootdir=@datarootdir@
+
+tmp=$(echo $* | egrep -- '--\<help\>|-\<h\>')
+if test $# -eq 0 || test -n "$tmp"; then
+    echo "rivetgun-config: configuration tool for the rivetgun generator validation executable"
+    echo "              http://projects.hepforge.org/rivet/"
+    echo
+    echo "Usage: $( basename $0 ) [--help|-h] | "
+    echo "           [--{prefix|datadir}] | "
+    echo "           [--{version}]"
+    echo "Options:"
+    echo "  --help | -h   : show this help message"
+    echo 
+    echo "  --prefix      : show the installation prefix (cf. autoconf)"
+    echo "  --datadir     : show the path to the directory containing param files etc."
+    echo
+    echo "  --version     : returns Rivet release version number"
+fi
+
+
+## "Atomic" build info, for "roll your own build" obsessives
+tmp=$( echo "$*" | egrep -- '--\<prefix\>')
+test -n "$tmp" && echo @prefix@
+
+tmp=$( echo "$*" | egrep -- '--\<datadir\>')
+test -n "$tmp" && echo @datadir@/RivetGun
+
+## Version
+tmp=$( echo "$*" | egrep -- '--\<version\>')
+test -n "$tmp" && echo @PACKAGE_VERSION@
