@@ -1,7 +1,7 @@
 ## Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT([Rivet],[1.0.0],[rivet@projects.hepforge.org],[Rivet])
+AC_INIT([Rivet],[1.1.0],[rivet@projects.hepforge.org],[Rivet])
 AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([src/Analysis.cc])
 AC_CONFIG_HEADERS([include/Rivet/Config/RivetConfig.hh])
@@ -16,7 +16,7 @@ AC_LCG_TAG
 if test "x$CXXFLAGS" == "x"; then CXXFLAGS="-O3"; fi
 
 ## Make compiler error messages more readable if gfilt is installed.
-AC_CEDAR_CXXFILTER
+dnl AC_CEDAR_CXXFILTER
 
 ## Checks for programs.
 AC_LANG(C++)
@@ -46,7 +46,8 @@ if test x$enable_rivetgun == xyes && test x$WITH_AGILE == xno; then
 fi
 
 ## Decide whether to build the Python extension
-AC_ARG_ENABLE(pyrivet, [AC_HELP_STRING(--enable-pyrivet, [build pyrivet Python module @<:@default=no@:>@])], [], [enable_pyrivet=no])
+AC_ARG_ENABLE(pyrivet, [AC_HELP_STRING(--enable-pyrivet, 
+  [build pyrivet Python module @<:@default=no@:>@])], [], [enable_pyrivet=no])
 AM_CONDITIONAL(ENABLE_PYRIVET, [test x$enable_pyrivet == xyes])
 if test x$enable_pyrivet == xyes; then
   AM_PATH_PYTHON(2.3)
@@ -56,19 +57,21 @@ if test x$enable_pyrivet == xyes; then
 fi
 
 ## Decide/determine whether to build with FastJet JADE + Durham support
-AC_ARG_ENABLE(jade, [AC_HELP_STRING(--enable-jade, [use JADE support from patched FastJet @<:@default=no@:>@])])
+AC_ARG_ENABLE(jade, [AC_HELP_STRING(--enable-jade, 
+  [use JADE support from patched FastJet @<:@default=no@:>@])])
 AC_MSG_CHECKING([whether to try and use the FastJet JADE + Durham plugin patch])
 AC_MSG_RESULT([test x$enable_jade != x])
 AM_CONDITIONAL(ENABLE_JADE, [test x$enable_jade != x])
 
 ## Optional ROOT analysis framework
-AC_ARG_ENABLE([ROOT], [AC_HELP_STRING(--enable-root, [build with ROOT output @<:@default=yes@:>@])], [], [enable_root=yes])
-if test "x$enable_root" != "xno"; then
-  AC_SEARCH_ROOT([with_root=yes
-    AM_CXXFLAGS="$AM_CXXFLAGS -Wno-long-long"
-    AC_TEST_ROOT], [AC_MSG_WARN([ROOT functionality not available])])
-  AM_CONDITIONAL(WITH_ROOT, [test x$enable_root == xyes])
+AC_ARG_ENABLE([ROOT], [AC_HELP_STRING(--enable-root, 
+  [build with ROOT output @<:@default=yes@:>@])], [], [])
+if test x$enable_root != xno; then
+  AC_SEARCH_ROOT([AC_TEST_ROOT], [AC_MSG_WARN([ROOT is not available])], [enable_root=no])
+else
+  AC_MSG_NOTICE([Not using ROOT])
 fi
+AM_CONDITIONAL([WITH_ROOT], [test x$enable_root != xno])
 
 ## Set default build flags
 AM_CPPFLAGS="-I\$(top_srcdir)/include -I\$(top_builddir)/include"
@@ -78,9 +81,13 @@ AM_CPPFLAGS="$AM_CPPFLAGS -I\$(HEPPIDINCPATH)"
 AM_CPPFLAGS="$AM_CPPFLAGS -I\$(HEPPDTINCPATH)"
 AM_CPPFLAGS="$AM_CPPFLAGS -I\$(FASTJETINCPATH)"
 AM_CXXFLAGS="$AM_CXXFLAGS -ansi -pedantic -Wall -DLIB_SUFFIX=$LIB_SUFFIX "
+if test x$with_root == xyes; then
+  AM_CXXFLAGS="$AM_CXXFLAGS -Wno-long-long "
+fi
 
 ## Debug flag (default=none)
-AC_ARG_ENABLE([debug], [AC_HELP_STRING(--enable-debug, [build with debugging symbols  @<:@default=no@:>@])], [], [enable_debug=no])
+AC_ARG_ENABLE([debug], [AC_HELP_STRING(--enable-debug, 
+  [build with debugging symbols  @<:@default=no@:>@])], [], [enable_debug=no])
 if test x$enable_debug == xyes; then
   [AM_CXXFLAGS="$AM_CXXFLAGS -g"]
 fi
@@ -88,19 +95,15 @@ fi
 AC_SUBST(AM_CPPFLAGS)
 AC_SUBST(AM_CXXFLAGS)
 
-AC_EMPTY_SUBST
-AC_CONFIG_FILES([
-include/Makefile
-include/Rivet/Makefile
-src/Makefile
-src/Tools/Makefile
-src/Projections/Makefile
-src/Analyses/Makefile
-src/Test/Makefile
-pyext/Makefile
-data/Makefile
-bin/Makefile
-bin/rivet-config
-Makefile],)
+AC_CONFIG_FILES(include/Makefile include/Rivet/Makefile)
+AC_CONFIG_FILES(src/Makefile)
+AC_CONFIG_FILES(src/Tools/Makefile)
+AC_CONFIG_FILES(src/Projections/Makefile)
+AC_CONFIG_FILES(src/Analyses/Makefile)
+AC_CONFIG_FILES(src/Test/Makefile)
+AC_CONFIG_FILES(pyext/Makefile)
+AC_CONFIG_FILES(data/Makefile)
+AC_CONFIG_FILES(bin/Makefile bin/rivet-config bin/rivetgun-config)
+AC_CONFIG_FILES(Makefile)
 
 AC_OUTPUT
